--- a/README
+++ b/README
@@ -2,4 +2,4 @@
 
 REST API built with JAVA + Micronaut for converting Liquibase scripts to XML, YAML, JSON and SQL
 
-Parts of code are from : https://github.com/daquino/liquify
+Parts of code are from the Liquify Project : https://github.com/daquino/liquify
